--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ emailjs.init("ZctgQ0aZhGr84yU-K");
                 <div class="home__icon_cont">
                   <a href="https://github.com/Primahale" target="_blank"><div class="icon"><i class="fab fa-github"></i></div></a>
                   <a href="linkedin.com/in/priyanka-mahale31/" target="_blank"><div class="icon"><i class="fab fa-linkedin"></i></div></a>
-                  <a href="https://twitter.com/Nikam_Karishma" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div></a>
+                  <a href="https://twitter.com/priyankamahal20" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div></a>
                 
                 </div>
               <a href="./Resume/Final resume.pdf" download="Priyanka Resume" class="btn">Download CV</a>
@@ -359,7 +359,7 @@ emailjs.init("ZctgQ0aZhGr84yU-K");
             <!-- ===== Contact info item end ====== -->
              <!-- ===== Contact info item start ====== -->
              <div class="contact-info-item padd-15">
-              <a href="https://twitter.com/Nikam_Karishma" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div>
+              <a href="https://twitter.com/priyankamahal20" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div>
               <h4>Twitter</h4>
               <p>Priyanka'stweets</p></a>
             </div>
