--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ emailjs.init("ZctgQ0aZhGr84yU-K");
                   <a href="https://twitter.com/priyankamahal20" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div></a>
                 
                 </div>
-              <a href="./Resume/Final resume.pdf" download="Priyanka Resume" class="btn">Download CV</a>
+              <a href="./Resume/Priyanka_Mahale_Resume_12-06-2023-09-31-17.pdf" download="Priyanka Resume" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
               <img src="images/pri photo 1.jpeg" alt="mypic">
